# NPCChaosBox

./: .gitignore  LICENSE  README.md  START_NPCChaos_WINDOWS.bat  pyproject.toml
.github/ISSUE_TEMPLATE/: app-would-not-open.yml  export-save-problem.yml  feature-idea.yml  generated-npc-felt-wrong.yml
.github/workflows/: tests.yaml  tests.yml
docs/: DEVELOPMENT_PLAN.md  ITCH_IO_PAGE.md  LAUNCH_POSTS.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_V0.1.0.md  TESTER_FEEDBACK.md  TESTER_SCRIPT.md
docs/demo-npcs/: 01-fantasy-tavern-101.txt  02-village-weird-202.txt  03-quest-giver-gone-wrong-303.txt  04-villain-contact-404.txt  05-shopkeeper-with-a-problem-505.txt  06-fantasy-tavern-606.txt  07-village-weird-707.txt  08-quest-giver-gone-wrong-808.txt  09-villain-contact-909.txt  10-shopkeeper-with-a-problem-1001.txt  README.md
npc_chaos_app/: __init__.py  app.py  engine.py  storage.py
npc_chaos_app/seeds/: crooked_lantern.json
npc_chaos_app/static/: app.css  app.js
npc_chaos_app/templates/: index.html
scripts/: first_run_acceptance.py  make_release_zip.ps1  review_npcs.py  sample_npcs.py  stop_dev.ps1  verify_release_zip.ps1
tests/: test_app_smoke.py  test_engine.py  test_release_scripts.py  test_static_ui.py  test_storage.py
