[project]
name = "house-rules-party"
version = "0.1.0"
description = "Local-first deterministic party chaos game."
readme = "docs/HOUSE_RULES.md"
requires-python = ">=3.10"
authors = [{ name = "House Rules" }]
dependencies = []

[project.scripts]
house-rules = "house_rules_app.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
