[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "npc-chaos-box"
version = "0.1.0"
description = "Local-first deterministic NPC generator for tabletop games and writing."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "NPC Chaos Box" }]
dependencies = []

[project.scripts]
npc-chaos-box = "npc_chaos_app.app:main"

[tool.setuptools.packages.find]
include = ["npc_chaos_app*"]

[tool.setuptools.package-data]
npc_chaos_app = [
  "seeds/*.json",
  "templates/*.html",
  "static/*.css",
  "static/*.js",
  "static/art/*.png",
]
